fixes white space behavior of pre elements

--- a/_sass/_syntax-highlighter.sass
+++ b/_sass/_syntax-highlighter.sass
@@ -17,6 +17,9 @@
   padding: 10px 20px
   letter-spacing: 0
 
+  pre
+    white-space: pre-wrap
+
   ::selection
     background-color: #0f0
     color: #000
